--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/eneax/weather-app#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "npm": "^6.0.1",
     "prop-types": "^15.6.1",
     "query-string": "^6.1.0",
     "react": "^16.3.2",
