--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "firebase-tools": "^3.18.4",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
