--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "query-string": "^6.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "tachyons": "^4.9.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
