--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
   "homepage": "https://github.com/eneax/weather-app#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.1",
+    "jquery": "^3.3.1",
     "npm": "^6.0.1",
+    "popper.js": "^1.14.3",
     "prop-types": "^15.6.1",
     "query-string": "^6.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-router-dom": "^4.2.2",
-    "tachyons": "^4.9.1"
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
